force-app/main/default/objects/Producto__c/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <label>Codigo</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>