force-app/main/default/objects/Producto__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blanco</fullName>
            </value>
            <value>
                <fullName>Tinto</fullName>
            </value>
            <value>
                <fullName>Rosado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>