force-app/main/default/objects/Producto__c/fields/Cosecha__c.field-meta.xml
<CustomField>
    <fullName>Cosecha__c</fullName>
    <label>Cosecha</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>