force-app/main/default/objects/Producto__c/fields/Imagen__c.field-meta.xml
<CustomField>
    <fullName>Imagen__c</fullName>
    <formula>IMAGE ( URL_Imagen__c , &quot;Imagen&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imagen</label>
    <type>Text</type>
</CustomField>