force-app/main/default/objects/Producto__c/fields/Origen__c.field-meta.xml
<CustomField>
    <fullName>Origen__c</fullName>
    <defaultValue>&quot;Mendoza&quot;</defaultValue>
    <label>Origen</label>
    <length>50</length>
    <type>Text</type>
</CustomField>