force-app/main/default/objects/Producto__c/fields/Pack__c.field-meta.xml
<CustomField>
    <fullName>Pack__c</fullName>
    <label>Pack</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6x1500ml</fullName>
            </value>
            <value>
                <fullName>12x750ml</fullName>
            </value>
            <value>
                <fullName>6x750ml</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>