force-app/main/default/objects/Producto__c/fields/Peso_Bruto__c.field-meta.xml
<CustomField>
    <fullName>Peso_Bruto__c</fullName>
    <inlineHelpText>Kilogramos</inlineHelpText>
    <label>Peso Bruto</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>