force-app/main/default/objects/Producto__c/fields/Precio_Unitario__c.field-meta.xml
<CustomField>
    <fullName>Precio_Unitario__c</fullName>
    <label>Precio Unitario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>