force-app/main/default/objects/Producto__c/fields/URL_Imagen__c.field-meta.xml
<CustomField>
    <fullName>URL_Imagen__c</fullName>
    <label>URL Imagen</label>
    <type>Url</type>
</CustomField>