force-app/main/default/objects/Producto__c/fields/Variedad__c.field-meta.xml
<CustomField>
    <fullName>Variedad__c</fullName>
    <label>Variedad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Varietales</valueSetName>
    </valueSet>
</CustomField>