force-app/main/default/objects/Producto__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Variedad__c</columns>
    <columns>Cosecha__c</columns>
    <columns>Pack__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>